WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193337
Fix rare crash under ScrollbarThemeMac::paintScrollCorner()
https://bugs.webkit.org/show_bug.cgi?id=193337
Summary
Fix rare crash under ScrollbarThemeMac::paintScrollCorner()
Simon Fraser (smfr)
Reported
2019-01-10 14:01:56 PST
Fix rare crash under ScrollbarThemeMac::paintScrollCorner()
Attachments
Patch
(2.43 KB, patch)
2019-01-10 14:04 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-01-10 14:04:02 PST
Created
attachment 358831
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-01-10 14:04:04 PST
<
rdar://problem/47179993
>
WebKit Commit Bot
Comment 3
2019-01-10 14:50:22 PST
Comment on
attachment 358831
[details]
Patch Clearing flags on attachment: 358831 Committed
r239847
: <
https://trac.webkit.org/changeset/239847
>
WebKit Commit Bot
Comment 4
2019-01-10 14:50:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug